# pyeclib

./: .dockerignore  .gitignore  .gitignore.REMOVED.git-id  .gitreview  .mailmap  .travis.yml  .unittests  .zuul.yaml  AUTHORS  ChangeLog  Dockerfile  LICENSE  License.txt  MANIFEST  MANIFEST.in  Makefile  README  README.REMOVED.git-id  README.md  README.rst  TODOS  TODOS.REMOVED.git-id  bindep.txt  pack_wheel.py  pyeclib_c.pyi  pyproject.toml  setup.py  setup.py.REMOVED.git-id  test-requirements.txt  tox.ini
c_eclib/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
c_eclib-0.2/: Makefile.am  Makefile.in  aclocal.m4  build.sh  build_jerasure.sh  clean.sh  configure  configure.ac  install.sh
c_eclib-0.2/alg_sig/: Makefile.am  Makefile.in  alg_sig.c  alg_sig_test.c
c_eclib-0.2/gf-complete/: Makefile.am  Makefile.in  README.txt  gf.c  gf_add.c  gf_complete.h  gf_example_2.c  gf_example_5.c  gf_example_6.c  gf_example_7.c  gf_general.c  gf_inline_time.c  gf_int.h  gf_method.c  gf_methods.c  gf_poly.c  gf_time.c  gf_unit.c  gf_w128.c  gf_w16.c  gf_w32.c  gf_w4.c  gf_w64.c  gf_w8.c  gf_wgen.c  orig.GNUmakefile
c_eclib-0.2/gf-complete/flag_tester/: README.txt  flag_test.c  intel_cpu_capabilities.h  pclmul_test.c  pclmul_test.txt  sse2_test.txt  sse4_test.txt  sse_test.c  ssse3_test.txt  whats_my_sse.c  which_compile_flags.sh
c_eclib-0.2/include/: alg_sig.h  config.h.in
c_eclib-0.2/jerasure/: Makefile.am  Makefile.in
c_eclib-0.2/xor_codes/: Makefile.in  xor_code.c
c_eclib-0.2/xor_codes/tools/: gen_failure_combs.py  gen_goldilocks_codes.py
c_eclib-0.9/: build-c_eclib.sh
c_eclib-0.9/include/: xor_code.h
c_eclib-0.9/xor_codes/: test_xor_hd_code.c  xor_code.c  xor_hd_code.c
c_eclib/alg_sig/: Makefile  Makefile.am  Makefile.in  alg_sig.c
c_eclib/xor_codes/: Makefile  Makefile.am  Makefile.in
c_eclib/xor_codes/tools/: gen_goldilocks_codes.py
doc/: requirements.txt
doc/source/: cli.rst  conf.py  index.rst
lib/jerasure/: License.txt.REMOVED.git-id  Makefile  Makefile.REMOVED.git-id  README.md.REMOVED.git-id  README.txt.REMOVED.git-id  doxygen.config.REMOVED.git-id
lib/jerasure/Examples/: Makefile  Makefile.REMOVED.git-id  cauchy_01.c.REMOVED.git-id  cauchy_02.c.REMOVED.git-id  cauchy_03.c.REMOVED.git-id  cauchy_04.c.REMOVED.git-id  decoder.c.REMOVED.git-id  encoder.c.REMOVED.git-id  jerasure_01.c.REMOVED.git-id  jerasure_02.c.REMOVED.git-id  jerasure_03.c.REMOVED.git-id  jerasure_04.c.REMOVED.git-id  jerasure_05.c.REMOVED.git-id  jerasure_06.c.REMOVED.git-id  jerasure_07.c.REMOVED.git-id  jerasure_08.c.REMOVED.git-id  liberation_01.c.REMOVED.git-id  reed_sol_01.c.REMOVED.git-id  reed_sol_02.c.REMOVED.git-id  reed_sol_03.c.REMOVED.git-id  reed_sol_04.c.REMOVED.git-id  test_file.0.REMOVED.git-id
lib/jerasure/doc/: CS-08-627.pdf.REMOVED.git-id
lib/jerasure/src/: Makefile  Makefile.REMOVED.git-id  cauchy.c.REMOVED.git-id  cauchy.h.REMOVED.git-id  cauchy_best_r6.c.REMOVED.git-id  cscope.out.REMOVED.git-id  galois.c.REMOVED.git-id  galois.h.REMOVED.git-id  jerasure.c.REMOVED.git-id  jerasure.h.REMOVED.git-id  liberation.c.REMOVED.git-id  liberation.h.REMOVED.git-id  reed_sol.c.REMOVED.git-id  reed_sol.h.REMOVED.git-id
playbooks/legacy/libec-pyeclib-unit/: run.yaml
playbooks/legacy/libec-pyeclib-unit-centos-7/: run.yaml
playbooks/legacy/pyeclib-tox-py27-centos-7/: run.yaml
pyeclib/: core.py  ec_iface.py  enum.py  utils.py
pyeclib/cli/: __init__.py  __main__.py  bench.py  check.py  list.py  verify.py  version.py
src/c/: common.c  common.h
src/c/alg_sig/: Makefile  alg_sig.c  alg_sig.h  alg_sig_test.c
src/c/gf-complete/: Makefile.am  Makefile.in  README  README.txt  aclocal.m4  configure
src/pyeclib/: core.py  ec_iface.py  enums.py  exceptions.py  utils.py
src/pyeclib_c/: pyeclib_c.c  pyeclib_c.h
src/xor_codes/: xor_code_3ft.c.REMOVED.git-id
test/: ec_pyeclib_decode.py  ec_pyeclib_encode.py  ec_pyeclib_file_test.sh  ec_pyeclib_fragments_needed.py  run_core_tests_manual.py  run_core_tests_manual_valgrind.py  run_tests.py  test_core.py  test_core_valgrind.py  test_ec.py  test_pyeclib.py  test_pyeclib_api.py  test_pyeclib_c.py  test_pyeclib_cli.py
tools/: pip-install-with-liberasurecode.sh  pyeclib_conf_tool.py  pyeclib_decode.py  pyeclib_encode.py  pyeclib_fragments_needed.py  test-setup.sh
(+349 files in other folders)
